@@ -1,21 +1,18 @@
 package pe.edu.tecsup.libros.controller;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
+import pe.edu.tecsup.libros.dto.AuthRequest;
+import pe.edu.tecsup.libros.dto.AuthResponse;
+import pe.edu.tecsup.libros.entity.Usuario;
+import pe.edu.tecsup.libros.security.JwtUtils;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-import pe.edu.tecsup.libros.entity.Usuario;
-import pe.edu.tecsup.libros.repository.UsuarioRepository;
-import pe.edu.tecsup.libros.security.JwtUtils;
+import org.springframework.web.bind.annotation.*;
 
-import java.util.Map;
+import java.util.Collections;
 
 @RestController
 @RequestMapping("/api/auth")
@@ -23,28 +20,28 @@ public class AuthController {
 
     @Autowired
     private AuthenticationManager authManager;
-    @Autowired private JwtUtils jwtUtils;
-    @Autowired private UsuarioRepository usuarioRepo;
-    @Autowired private PasswordEncoder encoder;
+
+    @Autowired
+    private JwtUtils jwtUtils;
 
     @PostMapping("/login")
-    public ResponseEntity<?> login(@RequestBody Map<String, String> data) {
+    public ResponseEntity<?> login(@RequestBody AuthRequest request) {
         try {
-            Authentication auth = authManager.authenticate(
-                    new UsernamePasswordAuthenticationToken(data.get("username"), data.get("password")));
+            Authentication authentication = authManager.authenticate(
+                    new UsernamePasswordAuthenticationToken(
+                            request.getUsername(),
+                            request.getPassword()
+                    )
+            );
 
-            Usuario usuario = usuarioRepo.findByUsername(data.get("username")).orElseThrow();
-            String token = jwtUtils.generateToken(usuario.getUsername(), usuario.getRol().name());
+            String token = jwtUtils.generateToken(authentication.getName());
 
-            return ResponseEntity.ok(Map.of("jwt", token, "rol", usuario.getRol().name()));
+            return ResponseEntity.ok().body(Collections.singletonMap("token", token));
+
         } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Credenciales incorrectas");
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Credenciales inválidas");
         }
     }
-
-    @PostMapping("/register")
-    public ResponseEntity<?> registrar(@RequestBody Usuario usuario) {
-        usuario.setPassword(encoder.encode(usuario.getPassword()));
-        return ResponseEntity.ok(usuarioRepo.save(usuario));
-    }
 }
+
+
